# m2p-service-client-asyncio

./: Pipfile  pyproject.toml
src/m2p_micro_client/: __init__.py  main.py  schema.py  service.py
src/m2p_micro_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
