[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["m2p_micro_client"]

[project]
name = "m2p-micro-client"
version = "0.0.19"
authors = [
  { name="Nirbhay Gupta", email="nirbhay.gupta@junio.in" },
]
description = "Falcon Contribution project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
  "marshmallow",
  "aiohttp",
]

[tool.pytest.ini_options]
addopts = "-rSA"
testpaths = [
  "tests"
]